--- a/src/pages/OrdersPage/components/CalendarGrid/CalendarGrid.css
+++ b/src/pages/OrdersPage/components/CalendarGrid/CalendarGrid.css
@@ -40,7 +40,7 @@
 .calendar-grid__time-column {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 67px;
   width: 58px;
   flex-shrink: 0;
 }
@@ -119,6 +119,7 @@
   right: 0;
   pointer-events: none;
   z-index: 1;
+  display: none; /* Скрываем горизонтальные линии */
 }
 
 .calendar-grid__hour-line {
@@ -136,7 +137,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  display: flex;
+  display: none; /* Скрываем вертикальные линии */
   gap: 4px;
   pointer-events: none;
   z-index: 1;
